PROJECT(CPP-Cookbook)
CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)
find_package(Boost REQUIRED COMPONENTS system)
set(CMAKE_BUILD_TYPE Debug)
include_directories(${Boost_INCLUDE_DIR})
# Note: a target should be already defined using 'add_executable' or 'add_library'
add_library(numbers numbers.cpp)
add_library(strings strings.cpp)
add_library(vectors vectors.cpp)
add_library(files files.cpp)
add_library(maps maps.cpp)
add_library(classes classes.cpp)
target_link_libraries(numbers ${Boost_LIBRARIES})
target_link_libraries(strings ${Boost_LIBRARIES})
target_link_libraries(files ${Boost_LIBRARIES})
target_link_libraries(maps ${Boost_LIBRARIES})
target_link_libraries(vectors ${Boost_LIBRARIES})
target_link_libraries(classes ${Boost_LIBRARIES})
add_executable(main main.cpp )
target_link_libraries(main numbers strings files vectors maps classes)
add_subdirectory(tst)
